--- a/static/screen.css
+++ b/static/screen.css
@@ -45,15 +45,10 @@ z-index: 0;
 
 .messages {
   background: #B1C771;
+  color: #000;
 }
 
 .messages:hover {
-  background: #000;
-  color: #f00;
-  font-size: 30px;
-}
-
-.messages:focus {
   background: #000;
   color: #f00;
   font-size: 30px;
@@ -495,6 +490,4 @@ div#footer a {
     color: #fff;
 }
 
-div.clear {
-    clear: both;
-}
+
