Divided client.js into six files.

--- a/static/screen.css
+++ b/static/screen.css
@@ -116,7 +116,6 @@ z-index: 0;
 }
 
 .rad:focus {
-    font-weight: 6;
     width: 65px;
     font-size: 45px;
     color: #68f2ad;
@@ -140,7 +139,6 @@ z-index: 0;
 }
 
 .rad2:focus {
-    font-weight: 6;
     width: 65px;
     font-size: 45px;
     color: #68f2ad;
@@ -350,6 +348,23 @@ article {
     text-align: center;
     padding-top: 40px;
     color: #68f2ad;
+}
+
+.drop {
+    border-width: 2px;
+    border-style: solid;
+    border-color: #ff0000;
+    width: 210px;
+    height: 115px;
+    float: left;
+    margin: 20px;
+    background-color:#000;
+    font-size: 60px;
+    text-align: center;
+    padding-top: 40px;
+    color: #9dff00;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .dropx {
